<?xml version="1.0"?>
<package format="2">
  <name>hoverboard_driver</name>
  <version>0.0.1</version>
  <description>Driver for hoverboard motors</description>
  <maintainer email="road.and.track@gmail.com">road.and.track@gmail.com</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>rosparam_shortcuts</build_depend>
  <build_depend>control_toolbox</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>rosparam_shortcuts</exec_depend>
  <exec_depend>control_toolbox</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
